UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Built__c.field-meta.xml
<CustomField>
    <fullName>Built__c</fullName>
    <label>Built</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Installation_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>