UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Bulk_Internet_Speed__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Internet_Speed__c</fullName>
    <description>For Comm Conn moved from contracts</description>
    <label>Bulk - Internet Speed</label>
    <length>45</length>
    <type>Text</type>
</CustomField>