UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Bulk_List_of_Equipment_Included__c.field-meta.xml
<CustomField>
    <fullName>Bulk_List_of_Equipment_Included__c</fullName>
    <description>For Comm Conn moved from contracts</description>
    <label>Bulk - List of Equipment Included</label>
    <length>45</length>
    <type>Text</type>
</CustomField>