UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Bulk_Non_Recurring_Charges_NRC__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Non_Recurring_Charges_NRC__c</fullName>
    <description>Moving fields from contract page to oppty for comm conn.</description>
    <label>Bulk - Non-Recurring Charges(NRC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>