UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Bulk_Other_Services_Name__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Other_Services_Name__c</fullName>
    <description>For Comm Conn moved from contracts</description>
    <label>Bulk - Other Services Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>