UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Bulk_Total_Current_MRC__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Total_Current_MRC__c</fullName>
    <description>For Comm Conn moved from contracts</description>
    <label>Bulk - Total Current MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>