UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Bulk_Video_Fee_MRC__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Video_Fee_MRC__c</fullName>
    <label>Bulk - Video_Fee(MRC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>