UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Bulk_Voice_Fee_MRC__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Voice_Fee_MRC__c</fullName>
    <description>For Comm Conn moved from contracts</description>
    <label>Bulk - Voice Fee(MRC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>