UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Bypass_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to BypassValidation rules created for the OPPT. As they are interfering when the lead is converted.</description>
    <label>Bypass Validation</label>
    <type>Checkbox</type>
</CustomField>