UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Bypass_Validation_Plus__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_Plus__c</fullName>
    <label>Bypass Validation Plus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NPS Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>