UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Capital_Review_Committee_CRC_Required__c.field-meta.xml
<CustomField>
    <fullName>Capital_Review_Committee_CRC_Required__c</fullName>
    <label>Capital Review Committee (CRC) Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>