UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Capital_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Capital_Review_Notes__c</fullName>
    <description>This field is for the Comm Conn page layout.</description>
    <label>Proforma/Capital Review Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>