UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Carrier_Region__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Region__c</fullName>
    <label>Carrier Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carrier - Central</fullName>
            </value>
            <value>
                <fullName>Carrier - East</fullName>
            </value>
            <value>
                <fullName>Carrier – Mid-South</fullName>
            </value>
            <value>
                <fullName>Carrier - National</fullName>
            </value>
            <value>
                <fullName>Carrier – South</fullName>
            </value>
            <value>
                <fullName>Carrier – Southeast</fullName>
            </value>
            <value>
                <fullName>Carrier - West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>