UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Casual_Usage_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Casual_Usage_Forecast__c</fullName>
    <label>Casual Usage Forecast ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>