UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Casual_Usage_Forecast_Qty__c.field-meta.xml
<CustomField>
    <fullName>Casual_Usage_Forecast_Qty__c</fullName>
    <label>Casual Usage Forecast Qty</label>
    <length>80</length>
    <type>Text</type>
</CustomField>