UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Category_One_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Category_One_Discount_Rate__c</fullName>
    <description>Created for E-Rate Section for Lisa Barrow case 00772157 6/2021</description>
    <label>Category One Discount Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>