UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/CC_CompensationPlan__c.field-meta.xml
<CustomField>
    <fullName>CC_CompensationPlan__c</fullName>
    <description>Connected Community Compensation Plan</description>
    <label>Compensation Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flex</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>