UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/CCID__c.field-meta.xml
<CustomField>
    <fullName>CCID__c</fullName>
    <formula>Account.CCID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCID</label>
    <type>Text</type>
</CustomField>