UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Challenge_Data_Relesase__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Data_Relesase__c</fullName>
    <label>Challenge Data Relesase</label>
    <type>Date</type>
</CustomField>