UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Challenge_Response__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Response__c</fullName>
    <label>Challenge Response</label>
    <type>Date</type>
</CustomField>