UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Challenge_Submission__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Submission__c</fullName>
    <label>Challenge Submission</label>
    <type>Date</type>
</CustomField>