UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/City_Approval__c.field-meta.xml
<CustomField>
    <fullName>City_Approval__c</fullName>
    <label>City Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>