UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost__c</fullName>
    <label>Closed/Lost</label>
    <type>Date</type>
</CustomField>