UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Closed_Lost_Duration__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Duration__c</fullName>
    <label>Closed/Lost Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>