UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <label>Closed/Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Lack of FTR video installs</fullName>
            </value>
            <value>
                <fullName>No fiber availability</fullName>
            </value>
            <value>
                <fullName>Low data speeds</fullName>
            </value>
            <value>
                <fullName>No video bulk</fullName>
            </value>
            <value>
                <fullName>Customer unresponsive</fullName>
            </value>
            <value>
                <fullName>Delay in providing proposal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Under Current Contract</fullName>
            </value>
            <value>
                <fullName>Data Issue</fullName>
            </value>
            <value>
                <fullName>No/GO - HBE</fullName>
            </value>
            <value>
                <fullName>No/GO - Business Decision</fullName>
            </value>
            <value>
                <fullName>No Bid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>