UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Closed_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Other_Reason__c</fullName>
    <label>Closed/Other Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The customer put the project on hold</fullName>
            </value>
            <value>
                <fullName>SF clean up</fullName>
            </value>
            <value>
                <fullName>Frontier passed on the project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>