UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Closed_same_Day__c.field-meta.xml
<CustomField>
    <fullName>Closed_same_Day__c</fullName>
    <formula>if(CloseDate =  datevalue(CreatedDate),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed same Day</label>
    <type>Checkbox</type>
</CustomField>