UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won__c</fullName>
    <label>Closed/Won</label>
    <type>Date</type>
</CustomField>