UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Cloud_IT__c.field-meta.xml
<CustomField>
    <fullName>Cloud_IT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloud IT</label>
    <type>Checkbox</type>
</CustomField>