UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Company_size__c.field-meta.xml
<CustomField>
    <fullName>Company_size__c</fullName>
    <label>Company size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>