UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Competitor_Lost_to__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Lost_to__c</fullName>
    <inlineHelpText>Name of competitor that won the opportunity</inlineHelpText>
    <label>Competitor Lost to</label>
    <type>TextArea</type>
</CustomField>