UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Contract2__c.field-meta.xml
<CustomField>
    <fullName>Contract2__c</fullName>
    <formula>IF(Contract_Check__c &gt;0, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract?</label>
    <type>Text</type>
</CustomField>