UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>Created for Lisa Barrow 00883680 1/22 for the Erate section on the opportunity</description>
    <label>Contract Term</label>
    <length>6</length>
    <type>Text</type>
</CustomField>