UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Contract_Check__c.field-meta.xml
<CustomField>
    <fullName>Contract_Check__c</fullName>
    <label>Contract Check</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Term_Months__c</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>