UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Contract_MRR__c.field-meta.xml
<CustomField>
    <fullName>Contract_MRR__c</fullName>
    <label>Contract MRR</label>
    <summarizedField>OpportunityLineItem.Contract_MRR_New__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>