UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Contract_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Months__c</fullName>
    <inlineHelpText>Best estimate of the contract term in months.</inlineHelpText>
    <label>Contract Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>