UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Contract_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Years__c</fullName>
    <label>Contract Term Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>