UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Contracted_Units_Number__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Units_Number__c</fullName>
    <inlineHelpText>Total number of doors on the contract. Include greenfield doors that do not have a COO.</inlineHelpText>
    <label>Contracted Units</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>