UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/County_Rank_Within_State__c.field-meta.xml
<CustomField>
    <fullName>County_Rank_Within_State__c</fullName>
    <label>County Rank Within State</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>