UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/CPE__c.field-meta.xml
<CustomField>
    <fullName>CPE__c</fullName>
    <label>CPE</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Equipment__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Type_of_Billing__c</field>
        <operation>equals</operation>
        <value>NRC</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>