UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/CPE_GM_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>CPE_GM_Adjustment__c</fullName>
    <label>CPE GM Adjustment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>