UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/CPE_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>CPE_Gross_Margin__c</fullName>
    <label>CPE Gross Margin</label>
    <summarizedField>OpportunityLineItem.CPE_Gross_Margin_Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.ProductFamily__c</field>
        <operation>equals</operation>
        <value>CPE,Smart Voice</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>