UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/CPE_NRC__c.field-meta.xml
<CustomField>
    <fullName>CPE_NRC__c</fullName>
    <label>CPE</label>
    <summarizedField>OpportunityLineItem.CPE_NRC_Price__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>