UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/CPE_Product__c.field-meta.xml
<CustomField>
    <fullName>CPE_Product__c</fullName>
    <description>Asks Users to check whether a product in the opportunity is a CPE product.</description>
    <inlineHelpText>Must select if a CPE product is a component of the Opportunity being created.</inlineHelpText>
    <label>CPE Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>