UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/CPE_Product_Replacement__c.field-meta.xml
<CustomField>
    <fullName>CPE_Product_Replacement__c</fullName>
    <description>Lists the Products that are being replaced by the installation of CPE equipment.</description>
    <inlineHelpText>Select the product being replaced by the installation of the CPE equipment</inlineHelpText>
    <label>CPE Product Replacement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local DT-B1</fullName>
            </value>
            <value>
                <fullName>Local DT-Centrex</fullName>
            </value>
            <value>
                <fullName>ISDN PRI</fullName>
            </value>
            <value>
                <fullName>Replaced Existing PBX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>