UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/CPE_Team_Count__c.field-meta.xml
<CustomField>
    <fullName>CPE_Team_Count__c</fullName>
    <description>Count of Team Members with &apos;CPE AE&apos; role on this Opportunity</description>
    <label>CPE Team Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>