UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/CRC_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>CRC_Submitted_Date__c</fullName>
    <label>CRC Submitted Date</label>
    <type>Date</type>
</CustomField>