UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Created_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Id__c</fullName>
    <formula>CASESAFEID( CreatedById )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Id</label>
    <type>Text</type>
</CustomField>