UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Created_By_Manager_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Manager_s_Name__c</fullName>
    <formula>CreatedBy.Manager_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Manager&apos;s Name</label>
    <type>Text</type>
</CustomField>