UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/CRT_Number__c.field-meta.xml
<CustomField>
    <fullName>CRT_Number__c</fullName>
    <label>CRT Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>