UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Current_BW__c.field-meta.xml
<CustomField>
    <fullName>Current_BW__c</fullName>
    <description>Created for Lisa Barrow for E-Rate section case 00883680 1/22</description>
    <label>Current BW</label>
    <length>10</length>
    <type>Text</type>
</CustomField>