UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Current_Data_Penetration_1__c.field-meta.xml
<CustomField>
    <fullName>Current_Data_Penetration_1__c</fullName>
    <formula>Account.Current_Data_Penetration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Data Penetration</label>
    <type>Text</type>
</CustomField>