UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Current_MRC__c.field-meta.xml
<CustomField>
    <fullName>Current_MRC__c</fullName>
    <description>Created for E-Rate Section for Lisa Barrow case 00772157 6/2021</description>
    <label>Current MRC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>