UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Current_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Provider__c</fullName>
    <description>Created for E-Rate Section for Lisa Barrow case 00772157 6/2021</description>
    <label>Current Provider</label>
    <length>30</length>
    <type>Text</type>
</CustomField>