UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Current_Video_Penetration_1__c.field-meta.xml
<CustomField>
    <fullName>Current_Video_Penetration_1__c</fullName>
    <formula>Account.Current_Video_Penetration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Video Penetration</label>
    <type>Text</type>
</CustomField>