UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Current_Voice_Penetration_1__c.field-meta.xml
<CustomField>
    <fullName>Current_Voice_Penetration_1__c</fullName>
    <formula>Account.Current_Voice_Penetration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Voice Penetration</label>
    <type>Text</type>
</CustomField>