UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Current_Voice_Penetration__c.field-meta.xml
<CustomField>
    <fullName>Current_Voice_Penetration__c</fullName>
    <label>Current Voice Penetration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>