UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Customer_Premise_Capital_K__c.field-meta.xml
<CustomField>
    <fullName>Customer_Premise_Capital_K__c</fullName>
    <label>Customer Premise Capital</label>
    <precision>14</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>