UCF-APR2.4/ftr main/force-app/main/default/objects/Opportunity/fields/Data_ARPU__c.field-meta.xml
<CustomField>
    <fullName>Data_ARPU__c</fullName>
    <label>Data ARPU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>